--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geocoding: ^3.0.0
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
